# pyPassgen

./: .gitignore  LICENSE  README.md  passgen.py  pyproject.toml
src/: constants.py  passgen.py
test/: test_passgen.py
